# rustle

./: .gitignore  Cargo.toml  README.md  build.rs  build_release.ps1  file_sending.txt  install_rust_to_d.bat  known_peers.json  me.txt  node_id.txt  remove_rust.bat  set_rust_env.ps1  setup_china_mirrors.ps1  setup_msvc_env.ps1
.cargo/: config.toml
.github/: copilot-instructions.md
doc/: epic.md  功能需求.md  技术实现方式.md  测试方法.md
installer/: .gitignore  RustleSetup.iss  rustle.exe.manifest
src/: main.rs  model.rs  net.rs  storage.rs  time_sync.rs  transfer.rs  ui.rs
