[package]
name = "rustle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "time", "io-util", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
get_if_addrs = "0.5"
sysinfo = "0.28"
sha2 = "0.10"
hex = "0.4"
serde_stacker = "0.1"
crc32fast = "1.4"

# GUI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
rfd = "0.14"
tar = "0.4.44"
open = "5.3.3"
image = "0.25"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_SystemInformation"] }

[build-dependencies]
winres = "0.1"

[profile.release]
# 优化设置，确保 release 版本没有调试信息和控制台
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
